--- a/CalculatorAppMarathe/app/src/main/res/layout/activity_main.xml
+++ b/CalculatorAppMarathe/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,8 @@
     tools:context=".MainActivity">
 
 
-
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/calcScreen"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="@android:drawable/editbox_background"
@@ -24,98 +23,177 @@
         android:id="@+id/button1"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/button_constraint_horizontal"
+        android:layout_marginTop="@dimen/button_constraint_vertical"
         android:background="@color/cardview_light_background"
-        android:text="Button"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="221dp" />
+        android:text="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calcScreen" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/button_constraint_horizontal"
+        android:layout_marginTop="@dimen/button_constraint_vertical"
         android:background="@color/cardview_light_background"
-        android:text="Button"
-        tools:layout_editor_absoluteX="134dp"
-        tools:layout_editor_absoluteY="221dp" />
+        android:text="2"
+        app:layout_constraintStart_toEndOf="@+id/button1"
+        app:layout_constraintTop_toBottomOf="@+id/calcScreen" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/button_constraint_horizontal"
+        android:layout_marginTop="@dimen/button_constraint_vertical"
         android:background="@color/cardview_light_background"
-        android:text="Button"
-        tools:layout_editor_absoluteX="246dp"
-        tools:layout_editor_absoluteY="221dp" />
+        android:text="3"
+        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/calcScreen" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/button_constraint_horizontal"
+        android:layout_marginTop="@dimen/button_constraint_vertical"
         android:background="@color/cardview_light_background"
-        android:text="Button"
-        tools:layout_editor_absoluteX="97dp"
-        tools:layout_editor_absoluteY="337dp" />
+        android:text="4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button1" />
 
     <Button
         android:id="@+id/button5"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/button_constraint_horizontal"
+        android:layout_marginTop="@dimen/button_constraint_vertical"
         android:background="@color/cardview_light_background"
-        android:text="Button"
-        tools:layout_editor_absoluteX="264dp"
-        tools:layout_editor_absoluteY="334dp" />
+        android:text="5"
+        app:layout_constraintStart_toEndOf="@+id/button4"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
 
     <Button
         android:id="@+id/button6"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/button_constraint_horizontal"
+        android:layout_marginTop="@dimen/button_constraint_vertical"
         android:background="@color/cardview_light_background"
-        android:text="Button"
-        tools:layout_editor_absoluteX="81dp"
-        tools:layout_editor_absoluteY="442dp" />
+        android:text="6"
+        app:layout_constraintStart_toEndOf="@+id/button5"
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
 
     <Button
         android:id="@+id/button7"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/button_constraint_horizontal"
+        android:layout_marginTop="@dimen/button_constraint_vertical"
         android:background="@color/cardview_light_background"
-        android:text="Button"
-        tools:layout_editor_absoluteX="264dp"
-        tools:layout_editor_absoluteY="334dp" />
+        android:text="7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
 
     <Button
         android:id="@+id/button8"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/button_constraint_horizontal"
+        android:layout_marginTop="@dimen/button_constraint_vertical"
         android:background="@color/cardview_light_background"
-        android:text="Button"
-        tools:layout_editor_absoluteX="215dp"
-        tools:layout_editor_absoluteY="430dp" />
+        android:text="8"
+        app:layout_constraintStart_toEndOf="@+id/button7"
+        app:layout_constraintTop_toBottomOf="@+id/button5" />
 
     <Button
         android:id="@+id/button9"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/button_constraint_horizontal"
+        android:layout_marginTop="@dimen/button_constraint_vertical"
         android:background="@color/cardview_light_background"
-        android:text="Button"
-        tools:layout_editor_absoluteX="215dp"
-        tools:layout_editor_absoluteY="325dp" />
+        android:text="9"
+        app:layout_constraintStart_toEndOf="@+id/button8"
+        app:layout_constraintTop_toBottomOf="@+id/button6" />
 
     <Button
         android:id="@+id/button0"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/button_constraint_horizontal"
+        android:layout_marginTop="@dimen/button_constraint_vertical"
         android:background="@color/cardview_light_background"
-        android:text="Button"
-        tools:layout_editor_absoluteX="291dp"
-        tools:layout_editor_absoluteY="455dp" />
+        android:text="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button7" />
+
     <Button
         android:id="@+id/button_dot"
         android:layout_width="@dimen/button_width"
         android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/button_constraint_horizontal"
+        android:layout_marginTop="@dimen/button_constraint_vertical"
         android:background="@color/cardview_light_background"
-        android:text="Button"
-        tools:layout_editor_absoluteX="291dp"
-        tools:layout_editor_absoluteY="455dp" />
+        android:text="."
+        app:layout_constraintStart_toEndOf="@+id/button0"
+        app:layout_constraintTop_toBottomOf="@+id/button8" />
+
+    <Button
+        android:id="@+id/button_equals"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/button_constraint_horizontal"
+        android:layout_marginTop="@dimen/button_constraint_vertical"
+        android:background="@color/cardview_light_background"
+        android:text="="
+        app:layout_constraintStart_toEndOf="@+id/button_dot"
+        app:layout_constraintTop_toBottomOf="@+id/button9" />
+
+    <Button
+        android:id="@+id/button_add"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/button_constraint_horizontal"
+        android:layout_marginTop="@dimen/button_constraint_vertical"
+        android:background="@color/cardview_light_background"
+        android:text="+"
+        app:layout_constraintStart_toEndOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/calcScreen" />
+
+    <Button
+        android:id="@+id/button_subtract"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/button_constraint_horizontal"
+        android:layout_marginTop="@dimen/button_constraint_vertical"
+        android:background="@color/cardview_light_background"
+        android:text="-"
+        app:layout_constraintStart_toEndOf="@+id/button6"
+        app:layout_constraintTop_toBottomOf="@+id/button_add" />
+
+    <Button
+        android:id="@+id/button_multiply"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/button_constraint_horizontal"
+        android:layout_marginTop="@dimen/button_constraint_vertical"
+        android:background="@color/cardview_light_background"
+        android:text="/"
+        app:layout_constraintStart_toEndOf="@+id/button9"
+        app:layout_constraintTop_toBottomOf="@+id/button_subtract" />
+
+    <Button
+        android:id="@+id/button_divide"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginStart="@dimen/button_constraint_horizontal"
+        android:layout_marginTop="@dimen/button_constraint_vertical"
+        android:background="@color/cardview_light_background"
+        android:text="*"
+        app:layout_constraintStart_toEndOf="@+id/button_equals"
+        app:layout_constraintTop_toBottomOf="@+id/button_multiply" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
