--- a/CalculatorAppMarathe/app/src/main/res/layout/activity_main.xml
+++ b/CalculatorAppMarathe/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,8 @@
         android:background="@color/cardview_light_background"
         android:text="1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calcScreen" />
+        app:layout_constraintTop_toBottomOf="@+id/calcScreen"
+        android:onClick="numSelected"/>
 
     <Button
         android:id="@+id/button2"
@@ -39,7 +40,8 @@
         android:background="@color/cardview_light_background"
         android:text="2"
         app:layout_constraintStart_toEndOf="@+id/button1"
-        app:layout_constraintTop_toBottomOf="@+id/calcScreen" />
+        app:layout_constraintTop_toBottomOf="@+id/calcScreen"
+        android:onClick="numSelected"/>
 
     <Button
         android:id="@+id/button3"
@@ -50,7 +52,8 @@
         android:background="@color/cardview_light_background"
         android:text="3"
         app:layout_constraintStart_toEndOf="@+id/button2"
-        app:layout_constraintTop_toBottomOf="@+id/calcScreen" />
+        app:layout_constraintTop_toBottomOf="@+id/calcScreen"
+        android:onClick="numSelected"/>
 
     <Button
         android:id="@+id/button4"
@@ -61,7 +64,8 @@
         android:background="@color/cardview_light_background"
         android:text="4"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button1" />
+        app:layout_constraintTop_toBottomOf="@+id/button1"
+        android:onClick="numSelected"/>
 
     <Button
         android:id="@+id/button5"
@@ -72,7 +76,8 @@
         android:background="@color/cardview_light_background"
         android:text="5"
         app:layout_constraintStart_toEndOf="@+id/button4"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/button2"
+        android:onClick="numSelected"/>
 
     <Button
         android:id="@+id/button6"
@@ -83,7 +88,8 @@
         android:background="@color/cardview_light_background"
         android:text="6"
         app:layout_constraintStart_toEndOf="@+id/button5"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/button3"
+        android:onClick="numSelected"/>
 
     <Button
         android:id="@+id/button7"
@@ -94,7 +100,8 @@
         android:background="@color/cardview_light_background"
         android:text="7"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        app:layout_constraintTop_toBottomOf="@+id/button4"
+        android:onClick="numSelected"/>
 
     <Button
         android:id="@+id/button8"
@@ -105,7 +112,8 @@
         android:background="@color/cardview_light_background"
         android:text="8"
         app:layout_constraintStart_toEndOf="@+id/button7"
-        app:layout_constraintTop_toBottomOf="@+id/button5" />
+        app:layout_constraintTop_toBottomOf="@+id/button5"
+        android:onClick="numSelected"/>
 
     <Button
         android:id="@+id/button9"
@@ -116,7 +124,8 @@
         android:background="@color/cardview_light_background"
         android:text="9"
         app:layout_constraintStart_toEndOf="@+id/button8"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
+        app:layout_constraintTop_toBottomOf="@+id/button6"
+        android:onClick="numSelected"/>
 
     <Button
         android:id="@+id/button0"
@@ -127,7 +136,8 @@
         android:background="@color/cardview_light_background"
         android:text="0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button7" />
+        app:layout_constraintTop_toBottomOf="@+id/button7"
+        android:onClick="numSelected"/>
 
     <Button
         android:id="@+id/button_dot"
@@ -138,7 +148,8 @@
         android:background="@color/cardview_light_background"
         android:text="."
         app:layout_constraintStart_toEndOf="@+id/button0"
-        app:layout_constraintTop_toBottomOf="@+id/button8" />
+        app:layout_constraintTop_toBottomOf="@+id/button8"
+        android:onClick="numSelected"/>
 
     <Button
         android:id="@+id/button_equals"
@@ -149,7 +160,8 @@
         android:background="@color/cardview_light_background"
         android:text="="
         app:layout_constraintStart_toEndOf="@+id/button_dot"
-        app:layout_constraintTop_toBottomOf="@+id/button9" />
+        app:layout_constraintTop_toBottomOf="@+id/button9"
+        android:onClick="numSelected"/>
 
     <Button
         android:id="@+id/button_add"
@@ -160,7 +172,8 @@
         android:background="@color/cardview_light_background"
         android:text="+"
         app:layout_constraintStart_toEndOf="@+id/button3"
-        app:layout_constraintTop_toBottomOf="@+id/calcScreen" />
+        app:layout_constraintTop_toBottomOf="@+id/calcScreen"
+        android:onClick="numSelected"/>
 
     <Button
         android:id="@+id/button_subtract"
@@ -171,7 +184,8 @@
         android:background="@color/cardview_light_background"
         android:text="-"
         app:layout_constraintStart_toEndOf="@+id/button6"
-        app:layout_constraintTop_toBottomOf="@+id/button_add" />
+        app:layout_constraintTop_toBottomOf="@+id/button_add"
+        android:onClick="numSelected"/>
 
     <Button
         android:id="@+id/button_multiply"
@@ -180,7 +194,8 @@
         android:layout_marginStart="@dimen/button_constraint_horizontal"
         android:layout_marginTop="@dimen/button_constraint_vertical"
         android:background="@color/cardview_light_background"
-        android:text="/"
+        android:onClick="numSelected"
+        android:text="*"
         app:layout_constraintStart_toEndOf="@+id/button9"
         app:layout_constraintTop_toBottomOf="@+id/button_subtract" />
 
@@ -191,7 +206,8 @@
         android:layout_marginStart="@dimen/button_constraint_horizontal"
         android:layout_marginTop="@dimen/button_constraint_vertical"
         android:background="@color/cardview_light_background"
-        android:text="*"
+        android:onClick="numSelected"
+        android:text="/"
         app:layout_constraintStart_toEndOf="@+id/button_equals"
         app:layout_constraintTop_toBottomOf="@+id/button_multiply" />
 
