--- a/CalculatorAppMarathe/app/src/main/res/values/dimens.xml
+++ b/CalculatorAppMarathe/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="button_height">80dp</dimen>
     <dimen name="button_constraint_horizontal"> 10dp </dimen>
     <dimen name="button_constraint_vertical">30dp</dimen>
+    <dimen name="big_button_width">180dp</dimen>
+    <dimen name="button_text">20sp</dimen>
 </resources>
